src/objects/TIC_Custom_Log__c.object
<CustomObject>
    <description>Oggetto per raccogliere i log dell&apos;integrazione con TIC</description>
    <fields>
        <fullName>Class_Name__c</fullName>
        <label>Class Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Family__c</fullName>
        <label>Family</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object__c</fullName>
        <label>Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>TIC Custom Log</label>
    <nameField>
        <label>Nome TIC Custom Log</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TIC Custom Log</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>